--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,6 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
 ul,
 ol {
   padding: 0;
@@ -50,9 +50,14 @@ ol {
 }
 
 
-a:not() {
-  text-decoration-skip-ink: auto;
+a{
+  text-decoration: none;
 }
+a{
+  padding: 5px;
+  color: rgb(0, 0, 0);
+}
+
 
 
 img {
@@ -84,7 +89,14 @@ button {
     scroll-behavior: auto !important;
   }
 }
-h1,h2{
-  display: flex;
-  justify-content: center;
+.container {
+  margin: 0 auto;
+  text-align: center;
 }
+h1,h2,h3 {
+  font-size: 30px;
+  font-weight: 500;
+  color: rgb(32, 32, 32);
+}
+
+
