--- a/src/modules/Header/UserMenu/UserMenu.module.css
+++ b/src/modules/Header/UserMenu/UserMenu.module.css
@@ -8,13 +8,14 @@
   font-size: 15px;
 }
 .btn {
-  padding: 10px;
+  padding: 0px 15px;
   font-size: 15px;
+  margin-left: 10px;
 
   cursor: pointer;
   border-radius: 40px;
 
-  border-color: transparent;
+  border: 1px solid black;
   height: 25px;
 }
 
